Fixing h2 alignment

--- a/src/static/readable.css
+++ b/src/static/readable.css
@@ -72,7 +72,7 @@ html {
 }
 
 h2 {
-  text-align: left;
+  text-align: center;
   font-family: sans-serif;
 }
 
